\name{NEWS}
\title{News for Package 'rtkore}

\section{Changes in rtkore version 1.5.0 (2018-01-23)}{
  \itemize{
    \item Accelerating template expression evaluation
    \item Adding support for binary operators expr + expr_number
    \item Adding support for functional basis in Regress project
    \item Updating documentation 
  }
}

\section{Changes in rtkore version 1.2.2 (2017-03-29)}{
  \itemize{
    \item Vignettes are renamed
    \item Fixing small bugs in expression evaluation
    \item Adding iterators for Array1D and List1D containers
    \item Adding extended Cholesky decomposition method 
  }
}
\section{Changes in rtkore version 1.2.1 (2017-03-07)}{
  \itemize{
    \item Vignettes are correctly named
    \item Adding callMethods array and R_init_myRoutines function
  }
}
\section{Changes in rtkore version 1.2.0 (2016-11-20)}{
  \itemize{
    \item Adding more vignettes about STK++ arrays
    \item Creating Factor class for vectors and MultiFactor class for arrays in STatistiK project
    \item Adding CvHandler class in DManager project for cross validation
  }
}
\section{Changes in rtkore version 1.1.1 (2016-08-04)}{
  \itemize{
    \item Creating and Implementing InvertMatrix and InvertSymMatrix classes
    for fixed size matrices (up to 4x4)
    \item Adding computation of levels and frequence to the Factor class
  }
}
\section{Changes in rtkore version 1.1.0 (2016-05-30)}{
  \itemize{
    \item Adding svd decomposition using lapack in Algebra project
    \item Adding online mean ancd variance computation in STatistiK project
    \item Adding kernels classes in STatistiK project
    \item Adding class Factor allowing to use factor rather than original
    nominal data encoding in STatistiK project
    \item Correcting many small bugs
  }
}
\section{Changes in rtkore version 1.0.1 (2015-11-24)}{
  \itemize{
    \item First release of the rtkore package, successor of the rtkpp package.
  }
}
\section{Changes in rtkpp version 0.9.2 (2015-07-30)}{